<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.snotes.snotes.auth.AuthActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/logo_of_snotes"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btn_login"
        style="@style/btnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_register"
        android:text="@string/login" />

    <Button
        android:layout_marginBottom="10dp"
        android:id="@+id/btn_register"
        style="@style/btnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/register" />

</RelativeLayout>