<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:id="@+id/layout_remainder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:minHeight="?attr/listPreferredItemHeightLarge"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <ImageView
            android:layout_width="@dimen/bottomSheetImage"
            android:layout_height="@dimen/bottomSheetImage"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="32dp"
            android:tint="#737373"
            app:srcCompat="@drawable/ic_remainder" />

        <TextView
            android:id="@+id/sheet_tv_remaider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/set_remainder"
            android:textColor="#737373"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:minHeight="?attr/listPreferredItemHeightLarge"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <ImageView
            android:layout_width="@dimen/bottomSheetImage"
            android:layout_height="@dimen/bottomSheetImage"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="32dp"
            android:tint="#737373"
            app:srcCompat="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/delete"
            android:textColor="#737373"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:minHeight="?attr/listPreferredItemHeightLarge"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <ImageView
            android:layout_width="@dimen/bottomSheetImage"
            android:layout_height="@dimen/bottomSheetImage"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="32dp"
            android:tint="#737373"
            app:srcCompat="@drawable/ic_export" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/export"
            android:textColor="#737373"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:minHeight="?attr/listPreferredItemHeightLarge"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <ImageView
            android:layout_width="@dimen/bottomSheetImage"
            android:layout_height="@dimen/bottomSheetImage"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="32dp"
            android:tint="#737373"
            app:srcCompat="@drawable/ic_copy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/copy"
            android:textColor="#737373"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:minHeight="?attr/listPreferredItemHeightLarge"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <ImageView
            android:layout_width="@dimen/bottomSheetImage"
            android:layout_height="@dimen/bottomSheetImage"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="32dp"
            android:tint="#737373"
            app:srcCompat="@drawable/ic_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/share"
            android:textColor="#737373"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
</LinearLayout>